--- a/app/frontend/scss/application.scss
+++ b/app/frontend/scss/application.scss
@@ -80,6 +80,7 @@ contents
 @import "./object/project/contents/form_contents";
 @import "./object/project/contents/list_contents";
 @import "./object/project/contents/user_profile_contents";
+@import "./object/project/contents/settings_profile_contents";
 
 /*===============================
 	utility
