--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -21,7 +21,9 @@
       .c-text-field.c-text-field--password
         = f.password_field :password_confirmation, placeholder: 'パスワード(確認用)', class: 'p-form-contents__input-field c-text-field__input'
       p.p-form-contents__input-note もう一度パスワードをご入力ください
-    = f.check_box :accept, class: ''
-    = f.label :accept, '利用規約に同意する', class: ''
+    .p-form-contents__input
+      .c-check-box
+        = f.check_box :accept, class: 'c-check-box__input'
+        = f.label :accept, '利用規約に同意する', class: 'c-check-box__label'
     .p-form-contents__submit
       button.c-hand-write-btn.c-hand-write-btn--wide 新規登録
