--- a/app/frontend/scss/application.scss
+++ b/app/frontend/scss/application.scss
@@ -53,6 +53,7 @@ mixin
 @import "./object/component/hand_write_button";
 @import "./object/component/link";
 @import "./object/component/outline_button";
+@import "./object/component/text_area";
 @import "./object/component/text_field";
 @import "./object/component/thumbnail";
 @import "./object/component/user_photo";
