--- a/app/views/settings/profile/index.html.slim
+++ b/app/views/settings/profile/index.html.slim
@@ -29,7 +29,7 @@
             / p = asset_pack_path '../images/default_photo.png'
 
 .p-settings-profile-contents
-  .p-settings-profile-contents__header
+  .p-settings-profile-contents__header: h1 プロフィールの編集
   .p-settings-profile-contents__body
     .p-settings-profile-contents__left
       = form_with model: current_user, scope: :profile, url: settings_profile_path(current_user), method: :patch, local: true, class: 'p-settings-profile-contents__form' do |f|
