--- a/app/frontend/scss/application.scss
+++ b/app/frontend/scss/application.scss
@@ -36,6 +36,7 @@ mixin
 	layout
 ================================*/
 
+@import "./layout/article_post";
 @import "./layout/container";
 @import "./layout/footer";
 @import "./layout/header";
