--- a/app/views/articles/edit.html.slim
+++ b/app/views/articles/edit.html.slim
@@ -1,3 +1,3 @@
 = content_for(:title, "「#{@article.title}」の編集")
 
-= render partial: 'shared/article/form', locals: { article: @article }
+= render partial: 'articles/article_form', locals: { article: @article }
