--- a/app/views/articles/new.html.slim
+++ b/app/views/articles/new.html.slim
@@ -1,3 +1,3 @@
 = content_for(:title, '新規投稿')
 
-= render partial: 'shared/article/form', locals: { article: @article }
+= render partial: 'articles/article_form', locals: { article: @article }
