--- a/app/views/layouts/article_post.html.slim
+++ b/app/views/layouts/article_post.html.slim
@@ -1,11 +1,13 @@
 doctype html
 html lang = 'ja'
   = render partial: 'shared/head'
-  body.bgcolor-bg
+  body
     = render partial: 'shared/header'
-    .container.container-width-custom.py-4
+    / .container.container-width-custom.py-4
       main
         = yield
+    #container.l-article-post
+      main = yield
     - if Rails.env.development?
       = debug(params)
     = render partial: 'shared/flash'
