--- a/app/views/settings/profile/index.html.slim
+++ b/app/views/settings/profile/index.html.slim
@@ -25,3 +25,5 @@
         .p-settings-profile-contents__user-photo = user_photo current_user, size: 200, class_name: 'c-user-photo'
         .p-settings-profile-contents__file-field
           = f.file_field :photo, accept: 'image/*'
+        .p-settings-profile-contents__submit
+          button.c-hand-write-btn type='submit' 変更する
