--- a/app/frontend/scss/object/project/contents/_settings_profile_contents.scss
+++ b/app/frontend/scss/object/project/contents/_settings_profile_contents.scss
@@ -41,7 +41,12 @@
 
   &__user-photo {
     text-align: center;
+    margin-bottom: .5em;
   }
 
-  &__file-field {}
+  &__file-field {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: .5em;
+  }
 }
