--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -5,7 +5,7 @@
 
 .p-list-contents
   .p-list-contents__header
-    h1 新着記事
+    h1 新着の遊び
   - if @articles.any?
     ul.p-list-contents__list
       - @articles.each do |article|
