--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -14,7 +14,16 @@
   = render partial: 'shared/parts/user_profile', locals: { user: @article.user }
 
 .p-article-contents.u-mb3
-  p.p-article-contents__datetime = @article.created_at
+  .p-article-contents__header
+    p.p-article-contents__datetime = @article.created_at
+    - if @article.user == current_user
+      .p-article-contents__menu
+        = link_to(edit_article_path(@article), class: 'p-article-contents__menu-item c-link')
+          i.fas.fa-pen.fa-fw
+          | 編集する
+        = link_to(article_path, method: :delete, data: { confirm: "削除すると二度と元に戻せません。獲得したいいねも削除されます。\n削除してよろしいですか？" }, class: 'p-article-contents__menu-item c-link')
+          i.fas.fa-trash-alt.fa-fw
+          | 削除する
   p.p-article-contents__overview = @article.overview
   h1.p-article-contents__title = @article.title
   ul.p-article-contents__tag-list
