--- a/app/frontend/scss/object/component/_badge.scss
+++ b/app/frontend/scss/object/component/_badge.scss
@@ -19,7 +19,7 @@
     &::before {
       font-family: "Font Awesome 5 Free";
       font-weight: 900;
-      font-size: .1rem;
+      font-size: .8em;
       content: "\f02b";
       padding-right: .2em;
     }
