--- a/app/frontend/scss/application.scss
+++ b/app/frontend/scss/application.scss
@@ -65,6 +65,7 @@ mixin
 
 @import "./object/project/article_card";
 @import "./object/project/article_item";
+@import "./object/project/article_post_form";
 @import "./object/project/comment_form";
 @import "./object/project/comment_item";
 @import "./object/project/draft_item";
