--- a/app/views/articles/_article_form.html.slim
+++ b/app/views/articles/_article_form.html.slim
@@ -1,26 +1,16 @@
-= form_with model: article, local: true do |f|
+= form_with model: article, local: true, class: 'p-article-post-form' do |f|
   - if article.id_digest.present?
     = f.hidden_field :id_digest, value: article.id_digest
-  .form-group
-    = f.label :title, class: 'sr-only'
-    = f.text_field :title, placeholder: 'タイトルを入力できます(140字まで)', class: 'form-control'
-  .form-group
-    = f.label :overview, class: 'sr-only'
-    = f.text_field :overview, placeholder: '記事の概要を入力できます(140字まで)', class: 'form-control'
-  .form-group
-    = f.label :tag, class: 'sr-only'
-    = f.text_field :tag, value: tag_formatting(article.tags), placeholder: '記事に関連するタグをスペース区切りで5つまで入力できます(屋外, トランプ, ローカルルール, 兵庫 etc...)', class: 'form-control'
-  .form-group
+  .p-article-post-form__title.c-text-field
+    = f.text_field :title, placeholder: 'タイトルを入力できます(140字まで)', class: 'c-text-field__input'
+  .p-article-post-form__overview.c-text-field
+    = f.text_field :overview, placeholder: '遊びの概要を入力できます(140字まで)', class: 'c-text-field__input'
+  .p-article-post-form__tag.c-text-field
+    = f.text_field :tag, value: tag_formatting(article.tags) ,placeholder: '記事に関連するタグをスペース区切りで10個まで入力できます(屋外, トランプ, ローカルルール, 兵庫 野球 鬼ごっこ etc...)', class: 'c-text-field__input'
+  .p-article-post-form__content-wrapper
     = f.rich_text_area :content
-  .from-group
-    = f.button '下書きに保存', name: 'article[status]', value: 'draft', class: 'btn btn-secondary'
-  .form-group
-    = f.button '投稿する', name: 'article[status]', value: 'published', class: 'btn btn-main'
-
-= form_with model: article, local: true, class: 'p-article-edit-form' do |f|
-  - if article.id_digest.present?
-    = f.hidden_field :id_digest, value: article.id_digest
-  .p-article-edit-form__title-wrapper
-  .p-article-edit-form__overview-wrapper
-  .p-article-edit-form__tag-wrapper
-  .p-article-edit-form__content-wrapper
+  ul.p-article-post-form__submit-list
+    li.p-article-post-form__submit-item
+      = f.button '下書きに保存', name: 'article[status]', value: 'draft', class: 'c-hand-write-btn c-hand-write-btn--supplement'
+    li.p-article-post-form__submit-item
+      = f.button '投稿する', name: 'article[status]', value: 'published', class: 'c-hand-write-btn'
