--- a/app/frontend/scss/application.scss
+++ b/app/frontend/scss/application.scss
@@ -12,6 +12,7 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 @import "~@fortawesome/fontawesome-free/scss/solid";
 @import "~@fortawesome/fontawesome-free/scss/brands";
 @import "trix/dist/trix";
+@import "selectize/dist/css/selectize";
 
 /*===============================
 foundation
@@ -29,8 +30,10 @@ mixin
 @import "./foundation/mixin/button";
 @import "./foundation/mixin/contents_box";
 
-//自動生成されたファイルだが、foundationフォルダ内の変数とmixinを内部で使用するためにここに記述
+// 自動生成されたファイルだが、foundationフォルダ内の変数とmixinを内部で使用するためにここに記述
 @import "./actiontext";
+// selectize.jsのデザイン修正用
+@import "./selectize.scss";
 
 /*===============================
 	layout
