--- a/app/frontend/scss/object/project/_article_post_form.scss
+++ b/app/frontend/scss/object/project/_article_post_form.scss
@@ -10,10 +10,6 @@
     margin-bottom: .5em;
   }
 
-  &__tag {
-    margin-bottom: .5em;
-  }
-
   &__content-wrapper {
     background: $white_color;
     border: 2px solid $general_line_color;
@@ -23,6 +19,8 @@
 
     trix-editor {
       min-height: 20em;
+      max-height: 20em;
+      overflow-y: auto;
       padding: 1em;
     }
   }
