--- a/app/frontend/scss/object/project/contents/_user_profile_contents.scss
+++ b/app/frontend/scss/object/project/contents/_user_profile_contents.scss
@@ -11,12 +11,13 @@
     text-align: left;
   }
 
-  &__full-name {
+  &__nick-name {
     font-weight: 700;
   }
 
   &__name {
     color: $supplement_color;
+    margin-bottom: 1em;
   }
 
   &__follow-btn {}
