--- a/app/views/account_activations/index.html.slim
+++ b/app/views/account_activations/index.html.slim
@@ -8,6 +8,7 @@
     h2.p-account-activation-contents__email = current_user.email
     p.p-account-activation-contents__text メール本文に記載されているURLをクリックして会員登録を完了しましょう！
     .p-account-activation-contents__info
+      // TODO メール再送リンクの処理
       .p-account-activation-contents__help
         p 24時間を過ぎた場合、最初から登録をやり直して頂く必要があります。
         p 詳しくは<a href="#" class="c-link">こちら</a>をご覧ください。
