--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -1,14 +1,7 @@
 = content_for(:title, @article.title)
 
-- if logged_in?
-  = content_for(:items)
-    ul.p-sticky-menu
-      li.p-sticky-menu__item
-        favorite-button :article-id='#{@article.id}' :is-favorited='#{current_user.already_favorite?(@article)}' :favorite-count=@article.favorites.count
-      li.p-sticky-menu__item
-        .p-sticky-menu__btn
-          button.c-circle-btn.c-circle-btn--highlight
-            <i class="fas fa-surprise fa-fw"></i>
+= content_for(:items)
+  = render partial: 'articles/sticky_menu', locals: { article: @article }
 
 = content_for(:side_menu)
   = render partial: 'shared/parts/user_profile', locals: { user: @article.user }
