--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,16 +1,12 @@
 doctype html
 html lang = 'ja'
   = render partial: 'shared/head'
-  body.bgcolor-bg
+  body
     = render partial: 'shared/header'
     = yield(:jumbotron)
-    .container.container-width-custom.py-4
-      / = render partial: 'shared/flash'
-      .row
-        main.col-md-9
-          = yield
-        aside.col-md-3
-          = yield(:sidemenu)
+    #container.l-container
+      main.l-main.u-flex-size-3.u-mr3 = yield
+      aside.l-sidebar--right.u-flex-size-1 = yield(:sidebar)
     = render partial: 'shared/footer'
     - if Rails.env.development?
       = debug(params)
