--- a/app/frontend/scss/application.scss
+++ b/app/frontend/scss/application.scss
@@ -76,6 +76,7 @@ mixin
 @import "./object/project/footer";
 @import "./object/project/header";
 @import "./object/project/sticky_menu";
+@import "./object/project/user_profile_mini";
 
 /*
 contents
