update 記事1つにつき設定できるタグの上限を変更(10 → 5)
多いと感じたため変更。記事のカードリンク、リストリンクのタグの表示も修正(タグを小さめに表示)

--- a/app/frontend/scss/object/project/_article_card.scss
+++ b/app/frontend/scss/object/project/_article_card.scss
@@ -37,8 +37,8 @@
   }
 
   &__tag-item {
-    font-size: 1.2rem;
-    margin-bottom: 1em;
+    font-size: .8rem;
+    margin-bottom: .5em;
 
     &:not(:last-child) {
       margin-right: 1em;
