--- a/app/frontend/scss/object/project/_article_item.scss
+++ b/app/frontend/scss/object/project/_article_item.scss
@@ -35,8 +35,8 @@
   }
 
   &__tag-item {
-    font-size: 1.2rem;
-    margin-bottom: 1em;
+    font-size: .8rem;
+    margin-bottom: .5em;
 
     &:not(:last-child) {
       margin-right: 1em;
