--- a/app/frontend/scss/object/project/_user_profile_mini.scss
+++ b/app/frontend/scss/object/project/_user_profile_mini.scss
@@ -1,7 +1,8 @@
 .p-user-profile-mini {
   display: flex;
   width: 270px;
-  // margin: .5em;
+  border: 1px solid $general_line_color;
+  border-radius: 3px;
   padding: .5em;
 
   &__photo {
