--- a/app/views/shared/parts/_user_profile_mini.html.slim
+++ b/app/views/shared/parts/_user_profile_mini.html.slim
@@ -5,5 +5,6 @@
   .p-user-profile-mini__body
     .p-user-profile-mini__name
       = link_to user.name, user, class: 'c-link'
-    .p-user-profile-mini__follow-btn
-      button.c-btn フォローする
+    - if logged_in? && current_user != user
+      .p-user-profile-mini__follow-btn
+        follow-button　:user-id='#{user.id}' :is-followed='#{current_user.already_follow?(user)}'
