--- a/app/views/shared/parts/_article_card.html.slim
+++ b/app/views/shared/parts/_article_card.html.slim
@@ -11,4 +11,4 @@
       .p-article-card__comment: span.c-badge.c-badge--comment = article.comments.count
   = link_to article.user, class: 'p-article-card__footer c-link'
     .p-article-card__icon = user_photo article.user, size: 40, class_name: 'c-user-photo'
-    .p-article-card__user-name = article.user.name
+    .p-article-card__user-name = user_name_format article.user
