--- a/app/views/shared/parts/_user_profile_mini.html.slim
+++ b/app/views/shared/parts/_user_profile_mini.html.slim
@@ -4,7 +4,7 @@
       = user_photo user, size: 80, class_name: 'c-user-photo'
   .p-user-profile-mini__body
     .p-user-profile-mini__name
-      = link_to user.name, user, class: 'c-link'
+      = link_to user_name_format(user), user, class: 'c-link'
     - if logged_in? && current_user != user
       .p-user-profile-mini__follow-btn
         follow-button　:user-id='#{user.id}' :is-followed='#{current_user.already_follow?(user)}'
