--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,4 +1,4 @@
-= content_for(:title, @user.name)
+= content_for(:title, user_name_format(@user))
 
 = content_for(:sidebar)
   = render partial: 'shared/parts/user_profile', locals: { user: @user }
