--- a/app/views/static_pages/home.html.slim
+++ b/app/views/static_pages/home.html.slim
@@ -1,4 +1,4 @@
-- unless logged_in?
+- unless visitor.logged_in?
   = content_for(:jumbotron)
     .jumbotron.jumbotron-fluid.bgcolor-header.text-white
       .container
