--- a/app/views/articles/_contents.html.slim
+++ b/app/views/articles/_contents.html.slim
@@ -4,7 +4,7 @@
       p.p-article-contents__created-at <span>投稿</span> : #{date_format article.created_at}
       - if article.updated?
         p.p-article-contents__updated-at <span>更新</span> : #{date_format article.updated_at}
-    - if article.user == current_user
+    - if visitor.myself? article.user
       .p-article-contents__menu
         = link_to edit_article_path(article), class: 'p-article-contents__menu-item c-link'
           i.fas.fa-pen.fa-fw
