--- a/app/views/settings/profile/index.html.slim
+++ b/app/views/settings/profile/index.html.slim
@@ -2,7 +2,7 @@
   .p-settings-profile-contents__header: h1 プロフィールの編集
   .p-settings-profile-contents__body
     .p-settings-profile-contents__left
-      = form_with model: current_user, scope: :profile, url: settings_profile_path(current_user), method: :patch, local: true, class: 'p-settings-profile-contents__form' do |f|
+      = form_with model: visitor, scope: :profile, url: settings_profile_path(visitor), method: :patch, local: true, class: 'p-settings-profile-contents__form' do |f|
         .p-settings-profile-contents__input
           = f.label :name, '新しいユーザーID', class: 'p-settings-profile-contents__input-label'
           .p-settings-profile-contents__input-field.c-text-field
@@ -21,8 +21,8 @@
         .p-settings-profile-contents__submit
           button.c-hand-write-btn type='submit' 更新する
     .p-settings-profile-contents__right
-      = form_with model: current_user, scope: :profile, url: settings_profile_path(current_user), method: :patch, local: true, class: 'p-settings-profile-contents__form' do |f|
-        .p-settings-profile-contents__user-photo = user_photo current_user, size: 200, class_name: 'c-user-photo'
+      = form_with model: visitor, scope: :profile, url: settings_profile_path(visitor), method: :patch, local: true, class: 'p-settings-profile-contents__form' do |f|
+        .p-settings-profile-contents__user-photo = user_photo visitor, size: 200, class_name: 'c-user-photo'
         .p-settings-profile-contents__file-field
           = f.file_field :photo, accept: 'image/*'
         .p-settings-profile-contents__submit
