--- a/app/frontend/scss/application.scss
+++ b/app/frontend/scss/application.scss
@@ -94,6 +94,7 @@ contents
 	utility
 ================================*/
 
+@import "./object/utility/disable";
 @import "./object/utility/flex_size";
 @import "./object/utility/float";
 @import "./object/utility/shadow";
