--- a/app/views/shared/parts/_user_profile.html.slim
+++ b/app/views/shared/parts/_user_profile.html.slim
@@ -5,7 +5,7 @@
     - if user.nick_name.present?
       h2.p-user-profile-contents__nick-name = user.nick_name
     h3.p-user-profile-contents__name = link_to "@#{user.name}", user, class: 'c-link'
-    - if logged_in? && user != current_user
+    - if visitor.logged_in? && !visitor.myself?(user)
       .p-user-profile-contents__follow-btn
-        follow-button　:user-id='#{user.id}' :is-followed='#{current_user.already_follow?(user)}'
+        follow-button　:user-id='#{user.id}' :is-followed='#{visitor.follow?(user)}'
   = simple_format(h(user.introduction), class: 'p-user-profile-contents__introduction')
