--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -3,15 +3,6 @@
 = content_for(:sidebar)
   = render partial: 'shared/parts/user_profile', locals: { user: @user }
 
-.p-list-contents
-  .p-list-contents__header
-    h1 新着の遊び
-  - if @articles.any?
-    ul.p-list-contents__list
-      - @articles.each do |article|
-        li.p-list-contents__list-item
-          = render partial: 'shared/parts/article_item', locals: { article: article }
-  - else
-    p 投稿された遊びはありません
-  .p-list-contents__footer
-    = paginate @articles
+.u-mb3 = render partial: 'users/tab_menu', locals: { user: @user, action: :show }
+= render partial: 'users/article_contents', locals: { articles: @articles, header_title: '新着の遊び', no_contents_message: '投稿された遊びはありません' }
+
