--- a/app/frontend/scss/application.scss
+++ b/app/frontend/scss/application.scss
@@ -77,6 +77,7 @@ mixin
 @import "./object/project/header";
 @import "./object/project/sticky_menu";
 @import "./object/project/tab_menu";
+@import "./object/project/user_list_item";
 @import "./object/project/user_profile_mini";
 
 /*
