--- a/app/frontend/scss/object/project/_article_item.scss
+++ b/app/frontend/scss/object/project/_article_item.scss
@@ -1,7 +1,6 @@
 .p-article-item {
   display: flex;
   width: 100%;
-  padding: 1em;
 
   &:hover {
     background: $general_line_color;
@@ -72,5 +71,7 @@
     margin-right: 1em;
   }
 
-  &__comment {}
+  &__comment {
+    margin-right: 1em;
+  }
 }
