--- a/app/frontend/scss/object/project/contents/_list_contents.scss
+++ b/app/frontend/scss/object/project/contents/_list_contents.scss
@@ -10,9 +10,11 @@
   }
 
   &__list-item {
-    // &:not(:last-child) {
-    // }
     border-bottom: 1px solid $general_line_color;
+
+    &:not(:last-child) {
+      margin-bottom: 1em;
+    }
   }
 
   &__footer {
