--- a/app/frontend/scss/object/project/_article_list_item.scss
+++ b/app/frontend/scss/object/project/_article_list_item.scss
@@ -1,4 +1,4 @@
-.p-article-item {
+.p-article-list-item {
   display: flex;
   width: 100%;
 
@@ -8,7 +8,7 @@
 
   &__thumbnail {
     flex: 1;
-    width: 30%;
+    width: 20%;
     margin-right: 1em;
   }
 
