--- a/app/frontend/scss/object/project/_article_list_item.scss
+++ b/app/frontend/scss/object/project/_article_list_item.scss
@@ -1,6 +1,7 @@
 .p-article-list-item {
   display: flex;
   width: 100%;
+  margin-bottom: 1em;
 
   &:hover {
     background: $general_line_color;
@@ -13,8 +14,10 @@
   }
 
   &__body {
-    flex: 3;
-    margin-bottom: 1em;
+    flex: 4;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
   &__overview {
@@ -25,12 +28,12 @@
   &__title {
     font-size: 3.2rem;
     font-weight: 700;
-    margin-bottom: .5em;
   }
 
   &__tag-list {
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: 1em;
   }
 
   &__tag-item {
