--- a/app/frontend/scss/object/project/_user_list_item.scss
+++ b/app/frontend/scss/object/project/_user_list_item.scss
@@ -1,16 +1,16 @@
 .p-user-list-item {
   display: flex;
+  margin-bottom: 1em;
 
   &__photo {
-    flex: 1;
-    width: 30%;
     margin-right: 1em;
   }
 
   &__body {
-    flex: 3;
+    flex-grow: 1;
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
 
   &__profile {}
@@ -23,5 +23,7 @@
     font-size: 1.2rem;
   }
 
-  &__follow {}
+  &__follow {
+    margin-right: 1em;
+  }
 }
