--- a/app/views/shared/parts/_user_list_item.html.slim
+++ b/app/views/shared/parts/_user_list_item.html.slim
@@ -1,9 +1,10 @@
 .p-user-list-item
-  .p-user-list-item__photo
+  = link_to user, class: 'c-link p-user-list-item__photo'
     = user_photo user, class_name: 'c-user-photo'
   .p-user-list-item__body
     .p-user-list-item__profile
-      .p-user-list-item__name = user_name_format user
+      .p-user-list-item__name = link_to user_name_format(user), user, class: 'c-link'
       .p-user-list-item__introduction = user.introduction
     .p-user-list-item__follow
-      button.c-hand-write-btn フォローする
+      - if visitor.logged_in? && !visitor.myself?(user)
+        follow-button　:user-id='#{user.id}' :is-followed='#{visitor.follow?(user)}'
