--- a/app/views/users/favorites.html.slim
+++ b/app/views/users/favorites.html.slim
@@ -4,5 +4,5 @@
   = render partial: 'shared/parts/user_profile', locals: { user: @user }
 
 .u-mb3 = render partial: 'users/tab_menu', locals: { user: @user, action: :favorites }
-= render partial: 'users/article_contents', locals: { articles: @articles, header_title: 'いいねした遊び', no_contents_message: 'いいねをした遊びはありません' }
+= render partial: 'users/article_contents', locals: { articles: @articles, header_title: 'いいね', no_contents_message: 'いいねをした遊びはありません' }
 
